<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="16dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="#F5F5FA"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatarPetIv"
            android:layout_width="120dp"
            android:layout_height="141dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/zelda" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/namePetTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/PetName_text"
                android:textColor="#333333"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/image_description"
                    app:srcCompat="@drawable/send"
                    />

                <TextView
                    android:id="@+id/associationPetTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/Associations_text"
                    android:textColor="#828282"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionPetTv"
                android:layout_marginTop="25dp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/ZeldaDescription"
                android:textColor="#4F4F4F"
                android:textSize="14sp"/>

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>