<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".WelcomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/GiraffeImage"
        android:layout_width="201dp"
        android:layout_height="291dp"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <ImageView
            android:id="@+id/HelloImage"
            android:layout_width="201dp"
            android:layout_height="291dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/hello" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/HelloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/hello_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <TextView
        android:id="@+id/HumanText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/human_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <TextView
        android:id="@+id/WelcomingText"
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/welcoming_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689" />

    <View
        android:id="@+id/Circle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/circle"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <ImageView
        android:id="@+id/WelcomeIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="@+id/Circle"
        app:layout_constraintEnd_toEndOf="@+id/Circle"
        app:layout_constraintStart_toStartOf="@+id/Circle"
        app:layout_constraintTop_toTopOf="@+id/Circle"
        app:srcCompat="@drawable/paw" />

    <Button
        android:id="@+id/WelcomeButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/roundbutton"
        app:layout_constraintBottom_toBottomOf="@+id/Circle"
        app:layout_constraintEnd_toEndOf="@+id/Circle"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="@+id/Circle"
        app:layout_constraintTop_toTopOf="@+id/Circle"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>
